syntax = "proto3";

package searchengine;

service SearchEngineService {
  rpc Search (SearchRequest) returns (SearchResponse);
}

message SearchRequest {
    string q = 1;
    optional string type = 2; 
}

message SearchResponse {
  repeated RateEntitySearchResult data = 1;
}

message RateEntitySearchResult {
  string id = 1;
  string name = 2;
  string type = 3;
  optional string street = 4;
  optional string city = 5;
  optional string state = 6;
  optional string country = 7;
  optional string googlePlaceId = 8;
  map<string, string> socials = 9;
  optional double latitude = 10;
  optional double longitude = 11;
}
